- [WIP] Create FileUploadService to handle the file upload - [FEATURE] Init Upload object on form if not present to show initial values - [FEATURE] Create target folder if not exist - [BUGFIX] Upload Model getter/setter for downloadlimit

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -22,6 +22,13 @@
 			<trans-unit id="upload.form.submit.label" resname="upload.form.submit.label">
 				<source>Send</source>
 			</trans-unit>
+
+			<trans-unit id="form.upload.fileuploadservice.storage_notfound" resname="form.upload.fileuploadservice.storage_notfound">
+				<source>There is no TYPO3 file storage. Please contact the administrator.</source>
+			</trans-unit>
+			<trans-unit id="form.upload.fileuploadservice.upload_failed" resname="form.upload.fileuploadservice.upload_failed">
+				<source>The file could not be uploaded. Please contact the administrator.</source>
+			</trans-unit>
         </body>
     </file>
 </xliff>
